--- a/portfolio.html
+++ b/portfolio.html
@@ -235,6 +235,21 @@
                 </li>
             </ul>
         </div>
+        <div class="">
+            <h3 class="join-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
+            <div class="subscribe">
+            <form  name="subscribe">
+            <label for="mail">
+                <input  class="subscribe-form" type="text" name="mail" id="mail" placeholder="E-mail">
+            </label>
+            
+            <button type="submit" class="subscribe-button"> <span class="subscribe-btn-text" >Подписаться <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/sprite.svg#send"> </use>
+            </svg> </span>
+           </button>
+          </form>
+            </div>
+        </div>
     </div>
 </footer>
     
